# cv_algorithms

./: .travis.yml  README.md  README.rst  build.py  coverage.rc  pyproject.toml  requirements.txt  setup.py  test.py  thinning.cpp
.circleci/: config.yml
cv_algorithms/: __init__.py  _checks.py  _ffi.py  classification.py  colorspace.py  contours.py  directions.py  distance.py  grassfire.py  morphology.py  neighbours.py  popcount.py  resize.py  text.py  thinning.py  utils.py
doc/: DoG.md  Grassfire.md  Thinning.md
examples/: .gitignore  difference-of-gaussian.py  grassfire.py  thinning.py
src/: common.hpp  directions.cpp  distance.cpp  grassfire.cpp  neighbours.cpp  popcount.cpp  thinning.cpp  windows.cpp
test/: TestColorspace.py  TestContours.py  TestDirections.py  TestDistance.py  TestGrassfire.py  TestNeighbours.py  TestPopcount.py  TestThinning.py  TestUtils.py
tests/: TestColorspace.py  TestDistance.py  TestGrassfire.py  TestNeighbours.py  TestThinning.py  TestUtils.py
