[tool.poetry]
name = "cv-algorithms"
version = "1.1.1"
description = "Optimized OpenCV extra algorithms for Python"
authors = ["Uli Köhler <github@techoverflow.net>"]
license = "Apache License 2.0"
readme = "README.md"

include = [
    # Include C extension in the package
    {path = "cv_algorithms/*.so", format = "wheel"},
    {path = "src", format = "sdist"},
]

[tool.poetry.build]
script = "build.py"
generate-setup-file = false

[tool.poetry.dependencies]
python = "^3.5"
numpy = "*"
opencv-python = "*"
setuptools = "*"
cffi = ">=0.7"

[tool.poetry.group.dev.dependencies]
pytest = "^6.0.0"

[build-system]
requires = ["poetry>=0.12", "wheel", "setuptools"]
build-backend = "poetry.core.masonry.api"

# Testing
[tool.pytest.ini_options]
python_files = "Test*.py"
testpaths = "tests"